# rocQuantum

./: CMakeLists.txt  README.md  bindings.cpp  build.bat  example.py  setup.py  test_bindings.py
examples/: run_bell_state.py  run_simple_circuit.py  run_simple_vqe.py
include/: rocquantum.h
integrations/qiskit-rocquantum-provider/qiskit_rocquantum_provider/: backend.py  provider.py
python/rocq/: CMakeLists.txt  api.py  bindings.cpp
rocq/: __init__.py  backends.py  gates.py  kernel.py  noise.py
rocqCompiler/: HipStateVecBackend.cpp  HipStateVecBackend.h
rocquantum/: CMakeLists.txt  core.py
rocquantum/backends/: base.py  infleqtion.py  ionq.py  pasqal.py  rigetti.py
rocquantum/include/rocquantum/: hipStateVec.h  hipTensorNet.h  hipTensorNet_api.h  hipTensorNet_internal_types.h  rocTensorUtil.h
rocquantum/include/rocquantum/Dialect/: QuantumOps.td
rocquantum/src/: Pathfinder.cpp  simulator.cpp
rocquantum/src/hipDensityMat/: hipDensityMat.cpp  hipDensityMat.hpp
rocquantum/src/hipStateVec/: CMakeLists.txt  GateFusion.cpp  MULTI_GPU_GUIDE.md  hipStateVec.cpp  measurement_kernels.hip  multi_qubit_kernels.hip  single_qubit_kernels.hip  two_qubit_kernels.hip
rocquantum/src/hipTensorNet/: CMakeLists.txt  hipTensorNet.cpp  rocTensorUtil.cpp
tests/: test_bindings.py  test_frameworks.py  test_rigetti_backend.py
